fix api register nurse weeky work schedule
