# controller/nurse_services/handler/get.weekly.schedule.go
@@ -7,20 +7,21 @@ import (
 	"github.com/PhuPhuoc/curanest_exe_be/utils"
 	"github.com/gin-gonic/gin"
 	"github.com/jmoiron/sqlx"
+
 )
 
-// @BasePath		/api/v1
-// @Summary		get weeky shedule of nurses
-// @Description	get weeky shedule of nurses
-// @Tags			nurses
-// @Accept			json
-// @Produce		json
-// @Param			nurse_id	path		string					true	"Nurse ID"
-// @Param			from		query		string					false	"date from"
-// @Param			to			query		string					false	"date to"
-// @Success		200			{object}	map[string]interface{}	"data"
-// @Failure		400			{object}	error					"Bad request error"
-// @Router			/nurses/{nurse_id}/get-weekly-work-schedule [get]
+//	@BasePath		/api/v1
+//	@Summary		get weeky shedule of nurses
+//	@Description	get weeky shedule of nurses
+//	@Tags			nurses
+//	@Accept			json
+//	@Produce		json
+//	@Param			nurse_id	path		string					true	"Nurse ID"
+//	@Param			from		query		string					true	"date from"
+//	@Param			to			query		string					true	"date to"
+//	@Success		200			{object}	map[string]interface{}	"data"
+//	@Failure		400			{object}	error					"Bad request error"
+//	@Router			/nurses/{nurse_id}/get-weekly-work-schedule [get]
 func getSchedules(db *sqlx.DB) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		nurse_id := c.Param("nurse_id")
@@ -31,6 +32,11 @@ func getSchedules(db *sqlx.DB) gin.HandlerFunc {
 
 		from := c.Query("from")
 		to := c.Query("to")
+
+		if from == "" || to == "" {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "missing required query parameters 'from', 'to'"})
+			return
+		}
 
 		repo := nurserepository.NewNurseStore(db)
 		list_fate, err := repo.GetSchedules(nurse_id, from, to)
