# controller/nurse_services/repository/get.schedule.repo.go
@@ -10,9 +10,10 @@ func (store *nurseStore) GetSchedules(nurse_id, from, to string) (shifts []nurse
 	query := `
 		select id, shift_date, shift_from, shift_to, status, appointment_id
 		from work_schedules
-		where nurse_id=? and shift_date between ? and ? 
+		where shift_date >= ? and shift_date <= ? and nurse_id=? 
+		order by shift_date, shift_from 
 	`
-	if err_query := store.db.Select(&shifts, query, nurse_id, from, to); err_query != nil {
+	if err_query := store.db.Select(&shifts, query, from, to, nurse_id); err_query != nil {
 		err = fmt.Errorf("cannot select schedule from db <%w>", err_query)
 	}
 	return
